--- a/12-Todoey/Base.lproj/Main.storyboard
+++ b/12-Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="Cfb-jF-zLe" id="24c-00-Z8q"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="Bc0-Ai-3tj"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="Bc0-Ai-3tj">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="VaY-xp-31y">
+                            <color key="tintColor" red="1" green="0.97742486129999995" blue="0.94419084799999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="Cfb-jF-zLe" id="HLD-oZ-hfK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y8U-GX-A3y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -46,7 +53,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="U4M-0d-DB2">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" red="1" green="0.97742486129999995" blue="0.94419084799999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </textAttributes>
